syntax = "proto3";

package trademarket.v1;

import "google/api/annotations.proto";
import "google/api/client.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/empty.proto";

// Represent trademarket
service TrademarketService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/items"
      body: "*"
    };
  }
}

message CreateRequest {
  string name = 1 [(google.api.field_behavior) = REQUIRED];
}

message CreateResponse {
  string id = 1;
}
